@@ -6,6 +6,7 @@ WriteMakefile(
                 PREREQ_PM    => {
                         'Scalar::Util'  => 0,
                         'Test::More'    => 0,
+			'Digest::MD5'   => 0
                         # commented out cos 1.0 is incompatible
                         # 'DBM::Deep'        => 0.97, # need to pass DATA filehandle
                 }
